--- a/LearningManagement-Automation/pom.xml
+++ b/LearningManagement-Automation/pom.xml
@@ -12,5 +12,12 @@
       <artifactId>selenium-java</artifactId>
       <version>4.24.0</version>
     </dependency>
+   <!--  https://mvnrepository.com/artifact/io.cucumber/cucumber-junit  -->
+<dependency>
+<groupId>io.cucumber</groupId>
+<artifactId>cucumber-junit</artifactId>
+<version>7.14.0</version>
+<scope>test</scope>
+</dependency>
   </dependencies>
 </project>
